# optimization-rust

./: Cargo.toml
src/: gd.rs  lib.rs  line_search.rs  numeric.rs  sgd.rs
src/problems/: mod.rs  problems.rs
