[package]
name = "optimization"
version = "0.2.0"
authors = ["Oliver Mader <b52@reaktor42.de>"]
license = "MIT"
description = "Collection of optimization algorithms"
repository = "https://github.com/b52/optimization-rust"
readme = "README.md"
keywords = ["optimization", "minimization", "numeric"]

[dependencies]
log = "0.4"
rand = { version = "0.7", optional = true }
rand_pcg = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.7"
